--- a/CodeGebeta/ios/Podfile
+++ b/CodeGebeta/ios/Podfile
@@ -12,6 +12,8 @@ target 'CodeGebeta' do
     :hermes_enabled => false
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'CodeGebetaTests' do
     inherit! :complete
     # Pods for testing
