--- a/CodeGebeta/android/gradle.properties
+++ b/CodeGebeta/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+# build keystore
+MYAPP_UPLOAD_STORE_FILE=code-gebeta.keystore
+MYAPP_UPLOAD_KEY_ALIAS=code-gebeta
+MYAPP_UPLOAD_STORE_PASSWORD=121921
+MYAPP_UPLOAD_KEY_PASSWORD=121921
