--- a/CodeGebeta/package.json
+++ b/CodeGebeta/package.json
@@ -17,6 +17,7 @@
     "appcenter-crashes": "4.3.0",
     "react": "17.0.2",
     "react-native": "0.66.0",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-size-matters": "^0.4.0",
