new button added
floating point added and setting section implemented by integrating with modal component,

dark mode setting item  and
language picker added

--- a/CodeGebeta/package.json
+++ b/CodeGebeta/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.2.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.4",
     "appcenter": "4.3.0",
@@ -18,11 +19,13 @@
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-markdown-display": "^7.0.0-alpha.2",
+    "react-native-modal": "^13.0.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
